# idealista-web-scraper

./: .env.example  .gitignore  ASYNC_IMPLEMENTATION_PLAN.md  IMPLEMENTATION_PLAN.md  IMPLEMENTATION_PLAN_PROGRESS_LOG.md  brightdata_balance.md  config.example.yaml  pyproject.toml  test_brightdata_quick.py  test_zyte_quick.py
data/: idealista.db  listings.parquet  test_export.csv  test_export.parquet
html/: brightdata_homepage.html  brightdata_search_cascais.html  sample_detail_34619165.html
html/zyte/: FINDINGS.md  district_concelhos.html  homepage.html  listing_detail.html  search_buy.html  search_page2.html  search_rent.html
src/idealista_scraper/: __init__.py  __main__.py
src/idealista_scraper/config/: __init__.py  settings.py
src/idealista_scraper/db/: __init__.py  base.py  models.py
src/idealista_scraper/export/: __init__.py  exporters.py
src/idealista_scraper/scraping/: __init__.py  async_client.py  async_details_scraper.py  async_listings_scraper.py  async_pre_scraper.py  client.py  details_scraper.py  listings_scraper.py  pre_scraper.py  selectors.py
src/idealista_scraper/utils/: __init__.py  async_time_utils.py  billing.py  logging.py  time_utils.py
tests/: __init__.py  test_async_client.py  test_async_scrapers.py  test_async_time_utils.py  test_cli.py  test_cli_async.py  test_database.py  test_selectors.py  test_url_builders.py
tests/fixtures/: district_concelhos.html  homepage.html  listing_detail.html  search_results.html
